package gestao;

import java.util.Collection;

public class DadoAcademico {

    private long dadoAcademicoId;

    private String serieEscolar;

    private String escolaridadeAtual;

    private String orgaoInstituicaoEmpresa;

    private Collection<Pessoa> pessoa;

}