public class Endereco {

	private uuid[] enderecoID;

	private String[] CEP;

	private String[] tipo;

	private String[] nome;

	private short[] numero;

	private String[] complemento;

	private String[] bairro;

	private String[] cidadeAtual;

	private String[] estadoAtual;

	private Pessoa pessoa;

	private Pessoa pessoa;

}
