public class Matricula {

	private uuid[] matriculaID;

	private boolean[] atual;

	private Curso[] curso;

	private char[] dataInicioMatricula;

	private char[] dataFimMatricula;

	private boolean[] ePrimeiraMatricula;

	private Professor[] professor;

	private String sala;

	private String diasDaSemana;

	private String horario;

	private Contrato contrato;

	private Curso curso;

	private Curso curso;

	private Professor professor;

	/**
	 *  
	 */
	public void mostrarAtributos() {

	}

}
