package gestao;

public class Curso {

	private long cursoId;

	private String metodologia;

	private int duracaoCurso;

	private int numHorasAulaCurso;

	private String descricao;

	private Contrato contrato;

	private Apostila apostila;

}
