@startuml

!define ENTITYMODERN
!define ENTITY_LINE_THICKNESS 2

abstract class BaseObject {
    -id: Long
    -nome: String
    +getId(): Long
    +setId(id: Long): void
}

abstract class Pessoa extends BaseObject {
    -nomeCompleto: string
    -CPF: string
    -RG: string
    -dataNascimento: date
    -genero: string
    -email: string
    -telefoneCelular: string
    -telefoneFixo: string
    -endereco: Endereco
    -cidadeNatal: string
    -estadoNatal: string
    -estrangeiro: boolean
    -dadosAcademicos: DadoAcademico
    -dadosProfissionais: DadoProfissional
}

class Professor {
    -especialidade: string
}

class Aluno {
    -matricula: string
    -login: string
    -senha: string
    +contrato: Contrato[*]
}

class Endereco {
    -enderecoID: int
    -CEP: string
    -tipo: string
    -nome: string
    -numero: string
    -complemento: string
    -bairro: string
    -estadoAtual: string
    -cidadeAtual: string
}

class DadoAcademico {
    -dadoAcademicoId: Long
    -serieEscolar: String
    -escolaridadeAtual: String
    -orgaoInstituicaoEmpresa: String
    -outros: String
}

class DadoProfissional {
    -dadoProfissionalId: Long
    -profissaoFuncaoCargo: String
    -orgaoInstituicaoEmpresa: String
    -outros: String
}

class Contrato {
    -contratoId: Long
    -situacaoContrato: String
    -numeroContrato: String
    -tipoContrato: String
    -contratante: String
    -modalidade: String
    -dataInicio: String
    -dataTermino: String
    -matricula: Matricula
}

class Matricula {
    -matriculaID: Long
    -atual: Boolean
    -curso: Curso
    -metodologia: String
    -dataInicioMatricula: String
    -dataFimMatricula: String
    -professor: Professor[*]
    -numHorasAulaCurso: int
    -duracaoCurso: int
    -diasDaSemana: String
    -horário: String
}

class Curso {
    -cursoId: Long
    -metodologia: String
    -numHorasAulaCurso: int
    -duracaoCurso: int
    -descricao: String
}

Pessoa <|-- Aluno
Pessoa <|-- Professor

Pessoa *-down-|> Endereco
Pessoa *-down-|> DadoAcademico
Pessoa *-down-|> DadoProfissional

Matricula "1" -- "1" Curso

Contrato "1" -- "1" Matricula

Matricula o-- Professor : precisa usar 1 ou mais

@enduml